# Firmware

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Kconfig  colugoClean.sh  colugoCube.sh  colugoCubeBlue.sh  colugoGazebo.sh  colugoGazeboCopter.sh  colugoGazeboKsql.sh  colugoGazeboWindy.sh  colugoNora.sh  kill_gazebo.sh
Documentation/: Doxyfile.in
ROMFS/px4fmu_common/init.d/: rc.interface  rc.vtol_defaults
ROMFS/px4fmu_common/init.d-posix/: rcS
ROMFS/px4fmu_common/mixers/: quad_hC.aux.mix  quad_hC.main.mix
ROMFS/px4fmu_common/mixers-sitl/: standard_vtol_sitl.main.mix
Tools/module_config/: generate_actuators_metadata.py
Tools/serial/: generate_config.py
boards/cubepilot/cubeorange/: default.px4board  minsize.px4board
boards/px4/fmu-v3/: default.px4board
boards/px4/sitl/: debug.px4board  default.px4board
cmake/: kconfig.cmake  px4_add_common_flags.cmake
msg/: CMakeLists.txt  arial_obox_status.msg  colugo_actuator.msg  colugo_transition.msg  commander_state.msg  currawong_ce367ecu_status.msg  debug_vect_clg.msg  hfe_da35efi_status.msg  lights.msg  strobe.msg  vehicle_command.msg  vehicle_status.msg
src/drivers/: drv_sensor.h
src/drivers/camera_capture/: camera_capture.cpp
src/drivers/camera_trigger/: CMakeLists.txt  camera_trigger.cpp
src/drivers/currawong/: CMakeLists.txt  Kconfig
src/drivers/currawong/ce367ecu/: CMakeLists.txt  ECUPackets.hpp  ECUProtocol.cpp  Kconfig  ce367ecu_can.cpp  ce367ecu_can.hpp  ce367ecu_main.cpp  ce367ecu_serial.cpp  ce367ecu_serial.hpp  module.yaml
src/drivers/currawong/ce367ecu/piccolo_protocol/: ECUDefines.cpp  ECUDefines.hpp  ECUPackets.cpp  ECUProtocol.cpp  ECUProtocol.hpp  ECUSettings.cpp  ECUSettings.hpp  PMUDefines.cpp  PMUDefines.hpp  PMUPackets.cpp  PMUPackets.hpp  PMUProtocol.cpp  PMUProtocol.hpp  PMUSettings.cpp  PMUSettings.hpp  fielddecode.cpp  fieldencode.cpp  scaleddecode.cpp  scaledencode.cpp
src/drivers/gimbal/: CMakeLists.txt  Kconfig
src/drivers/gps/: CMakeLists.txt  gps.cpp  params.c
src/drivers/hfe/: CMakeLists.txt  Kconfig
src/drivers/irlock/: irlock.cpp
src/drivers/pwm_out/: CMakeLists.txt  PWMOut.cpp  PWMOut.hpp
src/drivers/pwm_out_sim/: PWMSim.cpp
src/drivers/px4io/: px4io.cpp
src/drivers/rc_input/: crsf_telemetry.cpp
src/drivers/tap_esc/: TAP_ESC.cpp
src/drivers/tone_alarm/: ToneAlarm.cpp
src/drivers/uavcan/: CMakeLists.txt
src/drivers/uavcan_v1/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/colugo/: CMakeLists.txt  (+5 more)
(+137 files in other folders)
